--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <video autoplay loop muted playsinline preload="auto" id="bgVideo">
-      <source src="/img/bg-video.mp4" type="video/mp4" />
+      <source src="./img/bg-video.mp4" type="video/mp4" />
     </video>
     <div class="cursor inner"></div>
     <div class="cursor outer"></div>
