--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <section id="about-section" class="about-section">
         <div class="about-container">
           <div class="about-image" data-aos="zoom-in">
-            <img src="img/My Photo.jpg" alt="My Profile Picture" />
+            <img src="./img/my-photo.jpg" alt="My Profile Picture" />
           </div>
           <div class="about-content">
             <h2 class="section-heading" data-aos="fade-up">About Me</h2>
